--- a/Check4/WebContent/css/index.css
+++ b/Check4/WebContent/css/index.css
@@ -13,7 +13,8 @@ background-color: blue;
  /* 問② 文字の色を白にする */
 color: white;
  /* 問③ 背景に対して文字を縦方向に中央揃え */
-margin: 0 auto;
+margin-right: 0;
+margin-left: 0;
 }
 
 ul li {
@@ -48,5 +49,6 @@ background-color:blue;
  /* 問⑤ 文字の色を白にする */
 color:white;
  /* 問⑥ 背景に対して文字を縦方向に中央揃え */
-margin: 0 auto;
+margin-right: 0;
+margin-left: 0;
 }
